Fixed text overflow on borders and updated styling of code

--- a/web/src/main/webapp/assets/css/code-off-style.css
+++ b/web/src/main/webapp/assets/css/code-off-style.css
@@ -326,6 +326,11 @@ hr.line-nav {
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 
+#content-main {
+	margin-top: 0px;
+	margin-bottom: 8px;
+}
+
 #code-off-github a a:hover, a:focus {
 	color: #48BBF2;
 	text-decoration: none;
